<resources>
    <string name="app_name">Project</string>
    <string name="successfull">Successful</string>
    <string name="add_blogheading">Add Blog</string>
    <string name="add_image">Add image</string>
    <string name="uploadbtn">Upload</string>
    <string name="place_add_title">Place</string>
    <string name="description_title">Description</string>
    <string name="biomertirc_log">Biometric Login For App</string>
    <string name="resert_password">Reset Password</string>
    <string name="reset_instruction">Please enter the registered email to send the instruction to create new password</string>
    <string name="spam">Did not received the email?check your spam message</string>
    <string name="reset_enter_emali">Enter your registered email</string>
    <string name="sendbtn">Send</string>
    <string name="loading">Loading....</string>
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password_btn">Reset password</string>
    <string name="biometric_btn">Login using biometric credential</string>
    <string name="account_have_instruction">Don\'t have an account?</string>
    <string name="register_btn"> Register Now</string>
    <string name="update_btn">Update</string>
    <string name="register_title">Register</string>
    <string name="fullname_title">Full name *</string>
    <string name="fullname_instruction">Enter full name</string>
    <string name="address_title">Address *</string>
    <string name="address_instruction">Enter Address</string>
    <string name="email_title">Email Address *</string>
    <string name="email_instruction">Enter email address</string>
    <string name="phone_title">Phone number *</string>
    <string name="phone_instruction">Enter Phone number</string>
    <string name="birthday_title">Birthday *</string>
    <string name="birhday_instruction">Enter Birthday (dd/mm/yyyy)</string>
    <string name="password_title">Password *</string>
    <string name="password_instruction">Enter Password</string>
    <string name="confirm_password_title">Confirm Password *</string>
    <string name="blog_issue">Your blog can not add their have some issue</string>
    <string name="error">Error</string>
    <string name="register_issue">Your registration have some issue</string>
    <string name="try_message">Try again</string>
    <string name="thank_message">Thank you</string>
    <string name="register_successful_message">You are successfully register</string>
    <string name="okbtn">Ok</string>
    <string name="blog_prv_title">Now you can preview blog</string>
    <string name="add_blog_successful">You are successfully your blog added</string>
    <string name="submit">Submit</string>
    <string name="later">May be,Later</string>
    <string name="rate_title">Rate us</string>

    <string-array name="place">
        <item>Galle</item>s
        <item>Kandy</item>
        <item>Mahamewnawa Asapuwa</item>
        <item>Nelum Kuluna</item>
        <item>Seema Malakaya</item>
        <item>Sigiriya</item>
        <item>Vatadagaya</item>
    </string-array>

    <string-array name="description">
        <item>Galle is a major city in Sri Lanka.</item>
        <item>Kandy is a major city in Sri Lanka located in the Central Province.  </item>
        <item>Mahamevnawa, meaning “Great Cloud Monastery,” was the name of the first</item>
        <item>Lotus Tower, also referred to as Colombo Lotus Tower, is a 350 m tall </item>
        <item>Seema Malaka is a Buddhist temple in Colombo, Sri Lanka. The tempip.</item>
        <item>Sigiriya or Sinhagiri is an ancient rock fortress located in the </item>
        <item>The architecture of ancient Sri Lanka displays a rich diversity</item>
    </string-array>

    <string name="CreateItinerary">Create an Itinerary</string>
    <string name="Newtrip">Make your next trip plan</string>
    <string name="Where">Where you want to go?</string>
    <string name="AddDates">Add dates</string>
    <string name="StartDate">Start date</string>
    <string name="EndDate">End date</string>
    <string name="Startplanning">Start Planning</string>
    <string name="Add_a_place">Add a place</string>

    <string name="create_guide">CREATE GUIDE</string>
    <string name="createGuideBtn">CREATE GUIDE</string>
    <string name="guideShortDes">Make your own Travel Guide\nLet others know the destination</string>
    <string name="whereYouGo">Where you want to go?</string>
    <string name="createGuideHeading">Create Guide</string>
    <string name="kandyGuide">Kandy Guide</string>
    <string name="profileName">Tharushi Arawwala</string>
    <string name="kandyDescription">Kandy is a large city in central Sri Lanka. It\'s set on a\nplateau surrounded by mountains, which are home to tea\nplantations and biodiverse rainforest. The city\'s heart is\nscenic Kandy Lake (Bogambara Lake), which is popular\nfor strolling. Kandy is famed for sacred Buddhist sites,\nincluding the Temple of the Tooth (Sri Dalada Maligawa)\nshrine, celebrated with the grand Esala Perahera annual\nprocession.</string>
    <string name="blankBox" />
    <string name="selectDateHint">Select Date</string>
    <string name="tellViewers">Tell Viewers how you know Kandy</string>
    <string name="briefNote">Write a brief note here (eg: How to get around)</string>
    <string name="about">About</string>
    <string name="aboutDescription">Historical records suggest that Kandy was first established\nby the Vikramabahu III (1357 - 1374 AD), who was the</string>
    <string name="title_activity_create_new">CreateNew</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Itinerary">Itinerary</string>
    <string name="Map">Map</string>
    <string name="Expenses">Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="guide">Guide</string>
    <string name="itinerary">Itinerary</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="AddPlaces">Add Places</string>
    <string name="Place1">Place 1</string>
    <string name="Place2">Place 2</string>
    <string name="Addplacestrip">Add places for your trip</string>
    <string name="place3">Place 3</string>
    <string name="Addnotestrip">Add notes</string>
    <string name="Note1">Note 1</string>
    <string name="Note2">Note 2</string>
    <string name="Tripplan">Trip Plan</string>

    <string name="BackButton">back</string>
    <string name="create_guide_title">Create Guide</string>
    <string name="make_your_own_travel_guide_and">Make your own travel guide and</string>
    <string name="let_others_know">let others know</string>
    <string name="where_you_want_to_go">Where you want to go?</string>
    <string name="create_guide_btn">CREATE GUIDE</string>
    <string name="view">View</string>

    <string-array name="users">
        <item>Tharushi Navodya</item>s
        <item>Surith Arawwala</item>
        <item>Thrinith Fernando</item>
    </string-array>

    <string-array name="guideDescription">
        <item>Galle is a city on the southwest coast of Sri Lanka. It is known for Galle Fort, the fortified old city founded by Portuguese colonists in the 16th century. Stone sea walls, expanded by the Dutch, encircle car-free streets with architecture reflecting Portuguese, Dutch and British rule. Notable buildings include the 18th-century Dutch Reformed Church. Galle Lighthouse stands on the fort’s southeast tip.</item>
        <item>Kandy is a large city in central Sri Lanka. It is set on a plateau surrounded by mountains, which are home to tea plantations and biodiverse rainforest. The city\'s heart is scenic Kandy Lake (Bogambara Lake), which is popular for strolling. Kandy is famed for sacred Buddhist sites, including the Temple of the Tooth (Sri Dalada Maligawa) shrine, celebrated with the grand Esala Perahera annual procession.</item>
        <item>Poḷonnaruwa, also referred as Pulathisipura and Vijayarajapura in ancient times, is the main town of Polonnaruwa District in North Central Province, Sri Lanka. The modern town of Polonnaruwa is also known as New Town, and the other part of Polonnaruwa remains as the royal ancient city of the Kingdom of Polonnaruwa.</item>
    </string-array>


</resources>