<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/purple_700">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PlanButton"
        android:layout_width="152dp"
        android:layout_height="48dp"

        android:layout_marginBottom="136dp"
        android:background="#1922BD"
        android:isScrollContainer="false"
        android:radius="100dp"
        android:text="@string/Startplanning"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
    <SearchView
        android:id="@+id/searchView"
        android:layout_width="351dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="3dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toStartOf="@+id/StartDate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calender" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/AddDates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="3dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toStartOf="@+id/EndDate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calender" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/StartDate"
        android:layout_width="68dp"
        android:layout_height="28dp"

        android:layout_marginBottom="336dp"
        android:background="#FFFFFF"
        android:isScrollContainer="false"
        android:radius="3dip"
        android:text="@string/StartDate"
        android:textAlignment="inherit"
        android:textColor="#3E3D3D"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/EndDate"
        android:layout_width="68dp"
        android:layout_height="28dp"

        android:layout_marginBottom="336dp"
        android:background="#FFFFFF"
        android:isScrollContainer="false"
        android:text="@string/EndDate"
        android:textColor="#3E3D3D"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/CreateItinerary" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/Newtrip"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/Where"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/Where"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />




</androidx.constraintlayout.widget.ConstraintLayout>