<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bloglaout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Blog">


    <EditText
        android:id="@+id/bplaceTxt"
        android:layout_width="358dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/bbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bplace"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/bheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_blogheading"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/bplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_add_title"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/bdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_title"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/bdiscriptionTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bplaceTxt" />

    <EditText
        android:id="@+id/bdiscriptionTxt"
        android:layout_width="374dp"
        android:layout_height="48dp"

        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bimage"
        app:layout_constraintVertical_bias="0.596" />

    <ImageView
        android:id="@+id/bimage"
        android:layout_width="371dp"
        android:layout_height="399dp"
        app:layout_constraintBottom_toTopOf="@+id/bplaceTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bheading"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/camera" />

    <Button
        android:id="@+id/bbutton"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/uploadbtn"
        app:cornerRadius="?android:attr/windowTitleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />


</androidx.constraintlayout.widget.ConstraintLayout>
