<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/purple_700"
    tools:context=".Create_Itinerary">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PlanButton"
        android:layout_width="152dp"
        android:layout_height="48dp"

        android:layout_marginBottom="136dp"
        android:background="#1922BD"
        android:isScrollContainer="false"
        android:radius="200dp"
        android:text="@string/Startplanning"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/StartDate"-->
    <!--        android:layout_width="68dp"-->
    <!--        android:layout_height="28dp"-->

    <!--        android:background="#FFFFFF"-->
    <!--        android:isScrollContainer="false"-->
    <!--        android:onClick="showStartDatePickerDialog"-->
    <!--        android:radius="3dip"-->
    <!--        android:text="@string/StartDate"-->
    <!--        android:textAlignment="inherit"-->
    <!--        android:textColor="#3E3D3D"-->
    <!--        android:textSize="8sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/PlanButton"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.478"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/idSearchView"-->
    <!--        app:layout_constraintVertical_bias="0.082"-->
    <!--        tools:ignore="TouchTargetSizeCheck" />-->

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/EndDate"-->
    <!--        android:layout_width="68dp"-->
    <!--        android:layout_height="28dp"-->

    <!--        android:layout_marginTop="28dp"-->
    <!--        android:background="#FFFFFF"-->
    <!--        android:isScrollContainer="false"-->
    <!--        android:onClick="showEndDatePickerDialog"-->
    <!--        android:text="@string/EndDate"-->
    <!--        android:textColor="#3E3D3D"-->
    <!--        android:textSize="8sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/PlanButton"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.531"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/StartDate"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/idSearchView"-->
    <!--        app:layout_constraintVertical_bias="0.0"-->
    <!--        tools:ignore="TouchTargetSizeCheck" />-->

    <androidx.appcompat.widget.SearchView
        android:id="@+id/idSearchView"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:text="@string/AddDates"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSearchView" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="64dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSearchView"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_Startdate"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/startDate"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:layout_toEndOf="@+id/startDate"
        android:layout_toRightOf="@+id/startDate"
        android:backgroundTint="#03A9F4"
        android:text="@string/StartDate"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSearchView" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_below="@+id/startDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_EndDate"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_Startdate"
        android:layout_alignStart="@+id/btn_Startdate"
        android:layout_alignLeft="@+id/btn_Startdate"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/EndDate"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/PlanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Startdate"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/CreateItinerary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/CreateItinerary" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/Newtrip"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/Where"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <ImageView
        android:id="@+id/menuBarItinerary"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="20dp"
        app:tint="#003399"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuBarGuide"
        app:srcCompat="@drawable/itinerary_icon" />

    <ImageView
        android:id="@+id/menuBarProfile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="20dp"
        app:tint="#003399"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/menuBarItinerary"
        app:srcCompat="@drawable/user_icon" />

    <ImageView
        android:id="@+id/menuBarGuide"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="20dp"
        android:background="#00888484"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuBarHome"
        app:srcCompat="@drawable/compass"
        app:tint="#003399" />

    <ImageView
        android:id="@+id/menuBarHome"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        app:tint="#003399"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />


</androidx.constraintlayout.widget.ConstraintLayout>